--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>Alurapic</title>
+        <title>Alurapic - Projeto Angular JS</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <script src="js/lib/angular.min.js"></script>
@@ -12,8 +12,17 @@
     </head>
     <body ng-controller="FotosController">
         <div class="container">
-            <h1 class="text-center">Alurapic</h1>
-            <img class="img-responsive center-block" src={{foto.url}} alt={{foto.titulo}}>
+            <div class="jumbotron">
+                <h1 class="text-center">Alurapic</h1>
+            </div>
+            <div ng-repeat="foto in fotos" class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">{{foto.titulo}}
+                </div>
+                <div class="panel-body">
+                    <img class="img-responsive center-block" src={{foto.url}} alt={{foto.titulo}}>
+                </div> <!-- fim panel-body -->
+            </div> <!-- fim panel-default -->
         </div> <!-- fim container -->
     </body>
 </html>
